# shoes-market

./: .env  .gitignore  Makefile  alembic.ini  docker-compose.yml  pyproject.toml
docker/: Dockerfile  Dockerfile.local
local_postgres_data/base/16384/: 1247  1249  1259  16385  16388  16394  16397  16401  16403  16404  16411  16415  16416  16418  16419  16420  16421  16425  16453  16471  16472  2579  2606  2608  2610  2619  2620  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2699  (+10 more)
local_postgres_data/global/: 1260  1262  2671  pg_control  pg_internal.init
local_postgres_data/pg_stat_tmp/: db_0.stat  db_16384.stat  global.stat
migrations/: env.py
migrations/versions/: 13955784f69e_.py  23716aba6847_.py  307fde8c074d_.py  34508300f243_.py  8f2edfeea72f_.py  8fbe30d9f624_.py  b96ad8d35dfc_.py  bf6cc5a546dc_.py  d01d20c1ced9_.py  d6ac95d07ff6_.py  e5e9d7bd9a39_.py  eb23b7d44834_.py
shoes_market/: connection.py  constants.py  create_admin.py  database.py  depends.py  exceptions.py  mail.py  main.py  middleware.py  models.py  pagination.py  schemas.py  settings.py  utils.py
shoes_market/about_us/: __init__.py  exceptions.py  handlers.py  models.py  repos.py  schemas.py  services.py
shoes_market/orders/: __init__.py  depends.py  handlers.py  models.py  repos.py  schemas.py  services.py
shoes_market/products/: __init__.py  constants.py  depends.py  exceptions.py  handlers.py  models.py  repos.py  schemas.py  services.py
shoes_market/users/: __init__.py  depends.py  exceptions.py  handlers.py  models.py  repos.py  schemas.py  services.py
